--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -2,8 +2,9 @@
 
 <main>
   <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-8">
-
-    <%= render 'admin/shared/new_button', name: 'ახალი იუზერის დამატება', url: new_user_invitation_path %>
+    <% if current_user.superadmin? %>
+      <%= render 'admin/shared/new_button', name: 'ახალი იუზერის დამატება', url: new_user_invitation_path %>
+    <% end %>
 
     <%= render 'admin/shared/paging', records: @users, url_method: -> (**params){ admin_users_path(**params) }, paging_params: {}.merge(@search.attributes) %>
     <div class="px-4 sm:px-6 lg:px-8">
@@ -18,6 +19,7 @@
                              columns: [{ name: 'UID' },
                                        { name: 'იმეილი', classes: 'max-w-[240px]' },
                                        { name: 'როლი', classes: 'max-w-[240px]' },
+                                       { name: 'მოწვევა', classes: 'max-w-[240px]' },
                                        { name: '' }] %>
 
                   <%= render 'admin/shared/table/filter',
@@ -25,6 +27,7 @@
                              columns: [{ name: :id, classes: 'max-w-[60px]', input_type: :text_field, input_classes: 'px-2' },
                                        { name: :email, classes: 'max-w-[240px]', input_type: :text_field },
                                        { name: :role, classes: 'max-w[100px]', input_type: :enum_select, model: User },
+                                       { name: :invitation_pending?, classes: 'max-w[100px]', input_type: :boolean, model: User },
                                        { input_type: :submit, classes: 'py-2 text-left text-sm text-gray-500' }] %>
 
 
@@ -43,6 +46,7 @@
                                           delete_modal_text: 'ეს მომხმარებელი წაიშლება სრულად',
                                           email: true,
                                           role: true,
+                                          invitation_pending: true,
                                           edit: true,
                                           delete: true } %>
 
