--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>გამარჯობა <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>ვიღაცამ მოითხოვა ბმული შენი პაროლის შესაცვლელად. თუ შენ იყავი, გამოიყენებ ბმული ქვემოთ.</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to 'შეცვალე პაროლი', edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>თუ შენ არ მოგითხოვია, უბრალოდ ყურადღება არ მიაქციო ამ იმეილს.</p>
+<p>შენი პაროლი არ შეიცვლება, სანამ ამ ბმულზე არ შეხვალ.</p>
