Add logo to devise views

--- a/app/views/users/invitations/edit.html.erb
+++ b/app/views/users/invitations/edit.html.erb
@@ -1,6 +1,8 @@
 <div class="flex min-h-full flex-col justify-center py-12 sm:px-6 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-md">
-    <img class="mx-auto h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="Your Company">
+    <div class="flex justify-center">
+      <%= render 'shared/logo_md' %>
+    </div>
     <h2 class="mt-6 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">დააყენეთ პაროლი</h2>
   </div>
 
