Start implementing advanced search

--- a/app/views/text_blocks/search.html.erb
+++ b/app/views/text_blocks/search.html.erb
@@ -1,5 +1,5 @@
 <div data-controller="search-highlight" data-search-highlight-full-word-match-value="true">
-  <div class="max-w-screen-2xl mx-auto mt-4 flex grid grid-flow-col justify-start space-x-8">
+  <div class="sticky top-44 z-20 max-w-screen-2xl mx-auto mt-4 flex grid grid-flow-col justify-start space-x-8">
     <div data-search-highlight-target="searchbar" class="inline-flex">
       <%= render 'shared/search_bar' %>
     </div>
