--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="border-b border-gray-200 bg-white">
+<nav class="sticky top-0 z-20 bg-white">
   <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-0">
     <div class="flex h-24 grid grid-flow-col items-center justify-between">
       <div class="flex">
@@ -34,7 +34,7 @@
           <div class="flex space-x-0.5 grid grid-flow-col justify-items-center">
             <!-- Current: "border-indigo-500 text-gray-900", Default: "border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700" -->
             <div class="inline-flex justify-center items-center bg-stone-100 text-md hover:bg-stone-50">
-              <a href="#" class="px-8 h-full py-3">დეტალური ძიება</a>
+              <%= link_to 'დეტალური ძიება', advanced_search_text_blocks_path(query: params[:query]), class: "px-8 h-full py-3" %>
             </div>
             <div class="inline-flex justify-center items-center bg-stone-100 text-md hover:bg-stone-50">
               <a href="#" class="px-8 h-full py-3">ინსტრუმენტები</a>
