Modify users page

--- a/app/views/admin/shared/table/_simple_row.html.erb
+++ b/app/views/admin/shared/table/_simple_row.html.erb
@@ -48,12 +48,12 @@
     </td>
   <% end %>
 
-  <% if columns[:invitation_pending].present? %>
+  <% if columns[:status].present? %>
     <td data-controller="tooltip" data-tooltip-target="cell" data-tooltip-overflow-value="true" class="relative truncate z-0 border-b border-r text-sm scrollbar-hide hover:z-10 max-w-[240px] text-gray-500 px-3">
       <span class="highlightable">
-        <%= record.invitation_pending? %>
+        <%= record.status %>
       </span>
-      <%= render 'admin/shared/tooltip', text: record.invitation_pending?, highlightable: true %>
+      <%= render 'admin/shared/tooltip', text: record.status, highlightable: true %>
     </td>
   <% end %>
 
