--- a/app/views/admin/shared/_header.html.erb
+++ b/app/views/admin/shared/_header.html.erb
@@ -56,7 +56,7 @@
           </button>
           <div data-dropdown-target="options" class="hidden opacity-0 scale-95 absolute right-0 z-30 mt-2 w-56 origin-top-right divide-y divide-gray-100 rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
             <div class="py-1 space-y-1">
-              <div class="border-b border-gray-100" role="none">
+              <div role="none">
                 <!-- Active: "bg-gray-100 text-gray-900", Not Active: "text-gray-700" -->
                 <!-- <a href="#" class="text-gray-700 group flex items-center px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-0"> -->
                 <%= link_to 'ავტორები', admin_authors_path, class: "text-gray-700 group flex items-center px-4 py-2 text-sm hover:bg-gray-50 hover:text-gray-900", role: "menuitem", tabindex: '-1', id: "menu-item-0" %>
@@ -67,9 +67,11 @@
                 <%= link_to 'გამომცემლობები', admin_publishings_path, class: "text-gray-700 group flex items-center px-4 py-2 text-sm hover:bg-gray-50 hover:text-gray-900", role: "menuitem", tabindex: '-1', id: "menu-item-5" %>
                 <!-- </a> -->
               </div>
-              <div role="none">
-                <%= link_to 'მომხმარებლები', admin_users_path, class: "text-gray-700 group flex items-center px-4 py-2 text-sm hover:bg-gray-50 hover:text-gray-900", role: "menuitem", tabindex: '-1', id: "menu-item-0" %>
-              </div>
+              <% if current_user.superadmin? %>
+                <div class="border-t border-gray-100" role="none">
+                  <%= link_to 'მომხმარებლები', admin_users_path, class: "text-gray-700 group flex items-center px-4 py-2 text-sm hover:bg-gray-50 hover:text-gray-900", role: "menuitem", tabindex: '-1', id: "menu-item-0" %>
+                </div>
+              <% end %>
             </div>
           </div>
         </div>
