Fix year filter

--- a/app/views/text_blocks/advanced_search.html.erb
+++ b/app/views/text_blocks/advanced_search.html.erb
@@ -271,6 +271,10 @@
                                      paging_params: params.permit(:query,
                                                                   :termin,
                                                                   :original_language,
+                                                                  :year_start,
+                                                                  :year_end,
+                                                                  :translation_year_start,
+                                                                  :translation_year_end,
                                                                   search_text_block_pair: { supergroup_ids: [],
                                                                                             group_ids: [],
                                                                                             collection_ids: [],
